# perfect-freehand-python

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  api.html  contrib.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tips.html  usage.html
.doctrees/: api.doctree  contrib.doctree  environment.pickle  index.doctree  tips.doctree  usage.doctree
.github/workflows/: package.yml  sphinx.yml  test.yml
.reuse/: dep5
_sources/: api.rst.txt  tips.rst.txt  usage.rst.txt
_static/: documentation_options.js
debian/: changelog  control  copyright  rules
docs/: conf.py  contrib.rst  index.rst  requirements.txt
src/perfect_freehand/: __init__.py  get_stroke_radius.py  types.py  vec.py
tests/: conftest.py  test_get_stroke.py  test_get_stroke_outline_points.py  test_get_stroke_points.py  test_get_stroke_radius.py
tests/test_get_stroke/: output_test_defaults[corners].json  output_test_defaults[he2].json  output_test_defaults[hey].json  output_test_defaults[manyPoints].json  output_test_defaults[numberPairs].json  output_test_defaults[objectPairs].json  output_test_defaults[onePoint].json  output_test_defaults[scribble].json  output_test_defaults[twoEqualPoints].json  output_test_defaults[twoPoints].json  output_test_defaults[waves].json  output_test_defaults[withDuplicates].json  output_test_tricky_stroke_with_only_one_point.json
tests/test_get_stroke_outline_points/: output_test_many_points.json  output_test_one_point.json  output_test_two_points.json  output_test_with_duplicates.json
tests/test_get_stroke_points/: output_test_many_points.json  output_test_one_point.json  output_test_two_equal_points.json  output_test_two_points.json  output_test_with_duplicates.json
