# SPDX-FileCopyrightText: 2022 Calvin Walton
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools >= 42"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.8"
files = "src,tests"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "input_json: Name of shape from inputs.json to use for test."
]
