[metadata]
name = perfect-freehand
version = 1.0.0
author = Calvin Walton
author_email = calvin.walton@kepstin.ca
description = Draw perfect pressure-sensitive freehand lines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kepstin/perfect-freehand-python
project_urls = 
    Bug Tracker = https://github.com/kepstin/perfect-freehand-python/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
