# SPDX-FileCopyrightText: 2022 Calvin Walton
#
# SPDX-License-Identifier: MIT

[metadata]
name = perfect-freehand
version = attr:perfect_freehand.__version__
author = Calvin Walton, Steve Ruiz
author_email = calvin.walton@kepstin.ca
description = Draw perfect pressure-sensitive freehand lines. (Python port)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://docs.bigbluebutton.org/perfect-freehand-python/
project_urls = 
    Bug Tracker = https://github.com/bigbluebutton/perfect-freehand-python/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src

[options.package_data]
perfect_freehand =
    py.typed
