# SPDX-FileCopyrightText: 2022 Calvin Walton
#
# SPDX-License-Identifier: MIT

[metadata]
name = perfect-freehand
version = attr: perfect_freehand.__version__
description = Draw perfect pressure-sensitive freehand lines. (Python port)
long_description = file: README.md
long_description_content_type = text/markdown
author = Calvin Walton
maintainer = Calvin Walton
maintainer_email = calvin.walton@kepstin.ca
url = https://docs.bigbluebutton.org/perfect-freehand-python/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
license_files = LICENSES/*.txt
python_requires = >= 3.8
project_urls =
    Bug Tracker = https://github.com/bigbluebutton/perfect-freehand-python/issues
setup_requires = setuptools_scm

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
* =
    py.typed
